SK-1190: fix wrong fonts (#15)
* SK-1190: fix wrong fonts

* refactor: add color names

* fix: quotes

--- a/src/Components/App/App.module.css
+++ b/src/Components/App/App.module.css
@@ -5,5 +5,4 @@
   overflow-x: hidden;
   display: flex;
   flex-direction: column;
-  font-family: var(--body-font);
 }
