--- a/src/index.css
+++ b/src/index.css
@@ -53,20 +53,10 @@
   --color-spanish-grey-rgb: 151, 151, 151;
   --color-burgundy: #411329;
   --color-pixel-red: #ba0021;
-  --body-font: 'Overpass';
+  --color-shadow-rgb: 0 0 0;
 
   font-size: 16px;
   font-family:
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
     Overpass,
     sans-serif;
   -webkit-font-smoothing: antialiased;
